--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,13 @@
 parse features:
 * ignore comments
 * ignore empty lines
+* parse description per type (feature, rule, example)
 
 run examples:
 * revalidate pending
 
 tags:
-* filter multiple tags  
+* filter multiple tags
+
+report:
+* process type specific description
